[package]
name = "trendbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
html2pdf = "0.7.0"
log = { version = "0.4.20", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["cookies"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serenity = "0.12.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
