[package]
name = "clanko_zbierac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["cookies"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tracing = { version = "0.1.40", features = ["async-await"] }
